<resources>
    <string name="app_name">SuretiTestApp</string>
    <string name="sign_in_or_create_account">Sign In or Create Account</string>
    <string name="policyholder_account">POLICYHOLDER ACCOUNT</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cell_no">Cell No.</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="create_account">Create Account</string>
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="open_checks">Open Checks</string>
    <string name="initial_processing">Initial Processing</string>
    <string name="check">Check#:\u0020</string>
    <string name="amount">Amount:\u0020</string>
    <string name="claim">Claim#:\u0020</string>
    <string name="loan">Loan#:\u0020</string>
    <string name="preferred_contractor">Preferred Contractor:\u0020</string>
    <string name="branch_name">Branch Name:\u0020</string>
    <string name="loss_address">Loss Address:\u0020</string>
    <string name="apt_ste">APT/STE:\u0020</string>
    <string name="policyholder_documents">Policyholder Documents</string>
    <string name="policyholder_claim_packet">Policyholder Claim Packet</string>
    <string name="certificate_of_completion">Certificate of Completion</string>
    <string name="contractor_claim_packet">Contractor Claim Packet</string>
    <string name="contract_proposal">Contract/Proposal</string>
    <string name="approved_scope_of_work">Approved Scope of Work</string>
    <string name="_3d_scans">3D Scans</string>
    <string name="contractor_documents">Contractor Documents</string>
    <string name="post_mitigation">Post-Mitigation</string>
    <string name="progress">Progress</string>
    <string name="post_repair">Post-Repair</string>
    <string name="policyholder_collaborators">Policyholder Collaborators: </string>
    <string name="message">Message</string>
    <string name="upload_new_two_party_check">Upload New Two-Party Check</string>
</resources>